experimental explain probe - not pursued for now